--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  percent_indicator:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.17
   provider: ^6.0.5
   flutter_bloc: ^8.1.2
   bloc: ^8.1.1
   http: ^0.13.5
+
+
 
 dev_dependencies:
   flutter_test:
