--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,25 +28,36 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+ 
+  cached_network_image: ^3.2.3
+  cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
+  dio: ^5.2.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  percent_indicator:
-  cupertino_icons: ^1.0.2
-  shared_preferences: ^2.0.17
-  provider: ^6.0.5
-  flutter_bloc: ^8.1.2
-  bloc: ^8.1.1
-  http: ^0.13.5
-
-
+  flutter_bloc: ^8.1.3
+  flutter_localizations:
+    sdk: flutter
+  flutter_offline: ^2.1.0
+  flutter_rating_bar: ^4.0.1
+  flutter_screenutil: ^5.8.4
+  flutter_spinkit: ^5.1.0
+  flutter_svg: ^2.0.6
+  fluttertoast: ^8.1.1
+  geocoding: ^2.1.0
+  geolocator: ^9.0.2
+  get_it: ^7.2.0
+  google_maps_flutter: ^2.2.8
+  im_stepper: ^1.0.1+1
+  image_picker: ^0.8.7+5
+  shared_preferences: ^2.0.15
+  shimmer: ^3.0.0
+  simple_animations: ^4.2.0
+  supercharged: ^2.1.1
+  url_launcher: ^6.1.7
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -54,10 +65,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -65,18 +77,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
